--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -9,8 +9,13 @@
 ** use-package compile-time
 #+BEGIN_SRC emacs-lisp
 (eval-when-compile (require 'use-package))
-(require 'diminish)
+;(require 'diminish)
 (require 'bind-key)
+#+END_SRC
+** Custom file
+#+BEGIN_SRC emacs-lisp
+  (setq custom-file "~/dotfiles/emacs/emacs-custom.el")
+  (load custom-file)
 #+END_SRC
 * Org stuff
 ** modules
@@ -38,7 +43,10 @@
   (setq org-agenda-files (list "~/org/life.org"
             "~/org/ru.org" 
             "~/org/symfo.org"
-            "~/org/fiction.org"))
+            "~/org/fiction.org"
+            "~/serokell/serok.el/2019.org"
+            "~/engineering/lumi.org"
+            "~/serokell/serok.el/tasks.org"))
   (setq org-use-fast-todo-selection t)
   (setq org-directory "~/org")
 
@@ -72,9 +80,16 @@
            entry
            (file+headline org-index-file "todo")
            "* TODO %?\n")))
-          
+
 
 #+END_SRC
+
+#+RESULTS:
+| l | Today I learned | entry | (file+datetree (org-file-path til.org))     | * %?      |
+| u | link            | entry | (file+headline org-index-file check links)  | * %^L      |
+| w | Week review     | entry | (file+datetree (org-file-path weeklog.org)) | * %?      |
+| t | todo item       | entry | (file+headline org-index-file todo)         | * TODO %? |
+
 ** add templates
 #+BEGIN_SRC emacs-lisp
     (add-to-list 'org-structure-template-alist
@@ -84,7 +99,7 @@
   (org-babel-do-load-languages
    'org-babel-load-languages
    '((python . t)
-     (sh . t)
+     
      ))
 #+END_SRC
 
@@ -105,24 +120,45 @@
       (setq org-ref-completion-library 'org-ref-ivy-cite))
 #+END_SRC
 * Look
+** Fonts
+#+BEGIN_SRC emacs-lisp
+  (set-face-attribute 'default nil
+                    :family "monospace"
+                  :height 120
+                :weight 'normal
+              :width 'normal)
+
+#+END_SRC
 ** Solarized
 #+BEGIN_SRC emacs-lisp
-(use-package solarized
-    :if window-system
-    :init
-    (setq-default frame-background-mode 'dark)
-    (set-frame-parameter nil 'background-mode 'dark)
-    (add-hook 'after-make-frame-functions (lambda (frame)
-                "Reenable solarized"
-                (enable-theme 'solarized-dark)))
-    :config
-    (load-theme 'solarized-dark t)
-    (enable-theme 'solarized-dark))
+                ;; (use-package solarized
+                ;;     :if window-system
+                ;;     :init
+                ;;     (setq-default frame-background-mode 'dark)
+                ;;     (set-frame-parameter nil 'background-mode 'dark)
+                ;;     (add-hook 'after-make-frame-functions (lambda (frame)
+                ;;                 "Reenable solarized"
+                ;;                 (enable-theme 'solarized-dark)))
+                ;;     :config
+                ;;     (load-theme 'solarized-dark t)
+                ;;     (enable-theme 'solarized-dark))
+            (setq solarized-distinct-fringe-background t)
+          (setq solarized-scale-org-headlines nil)
+        (defun reload-solarized (event)
+          (let ((theme (intern (concat "solarized-" (with-temp-buffer
+                          (insert-file-contents "~/dotfiles/color-scheme")
+                        (string-trim (buffer-string))
+                          )))))
+          (load-theme theme t)))
+      (reload-solarized nil)
+    ;; auto-reload
+  (require 'filenotify)
+(file-notify-add-watch "~/dotfiles/color-scheme" '(change) 'reload-solarized)
 #+END_SRC
 ** Transparency
 #+BEGIN_SRC emacs-lisp
-(set-frame-parameter (selected-frame) 'alpha '(90 . 85))
-(add-to-list 'default-frame-alist '(alpha . (90 . 85)))
+(set-frame-parameter (selected-frame) 'alpha '(95 . 95))
+(add-to-list 'default-frame-alist '(alpha . (95 . 95)))
 #+END_SRC
 ** Cleaner frames
 #+BEGIN_SRC emacs-lisp
@@ -135,6 +171,31 @@
 (when window-system (global-hl-line-mode))
 (show-paren-mode t)
 #+END_SRC
+** live hex color previews
+from https://vickychijwani.me/nuggets-from-my-emacs-part-i/
+#+BEGIN_SRC emacs-lisp
+;; CSS color values colored by themselves
+;; http://news.ycombinator.com/item?id=873541
+(defvar hexcolor-keywords
+  '(("#[abcdef[:digit:]]+"
+     (0 (put-text-property
+         (match-beginning 0)
+         (match-end 0)
+         'face (list :background
+                     (match-string-no-properties 0)))))))
+
+(defun hexcolor-add-to-font-lock ()
+  (font-lock-add-keywords nil hexcolor-keywords))
+(add-hook 'css-mode-hook 'hexcolor-add-to-font-lock)
+
+#+END_SRC
+** diminish
+#+BEGIN_SRC emacs-lisp
+;(diminish 'undo-tree-mode)
+;(diminish 'auto-revert-mode)
+;(diminish 'org-indent-mode)
+#+END_SRC
+
 * Feel
 #+BEGIN_SRC emacs-lisp
 (defalias 'yes-or-no-p 'y-or-n-p) 
@@ -184,18 +245,19 @@
       (setq enable-recursive-minibuffers t)
       :config
       (ivy-mode t)
+      :diminish
       :bind (("C-s" . swiper)
              ("C-c C-r" . ivy-resume)
              ("<f6>" . ivy-resume)))
 #+END_SRC
 ** Counsel
 #+BEGIN_SRC emacs-lisp
-  (use-package counsel
-      :bind (("M-x" . counsel-M-x)
-             ("C-x C-f" . counsel-find-file)))
+    (use-package counsel
+        :bind (("M-x" . counsel-M-x)
+               ("C-x C-f" . counsel-find-file)
+               ("C-h f" . counsel-describe-function)
+               ("C-h v" . counsel-describe-variable)))
 #+END_SRC
-    (global-set-key (kbd "<f1> f") 'counsel-describe-function)
-    (global-set-key (kbd "<f1> v") 'counsel-describe-variable)
     (global-set-key (kbd "<f1> l") 'counsel-find-library)
     (global-set-key (kbd "<f2> i") 'counsel-info-lookup-symbol)
     (global-set-key (kbd "<f2> u") 'counsel-unicode-char)
@@ -208,9 +270,12 @@
 ** projectile
 #+BEGIN_SRC emacs-lisp
     (use-package projectile
-     :config
-  (projectile-global-mode t)
-  (use-package counsel-projectile))
+      :init
+      (setq projectile-mode-line "Projectile")
+      :config
+      (projectile-global-mode t)
+      )
+  ;(use-package counsel-projectile))
 #+END_SRC
 ** ggtags
 #+BEGIN_SRC emacs-lisp
@@ -218,7 +283,58 @@
 :demand
 :bind ("M-." . ggtags-find-tag-dwim))
 #+END_SRC
+** intuitive window resize
+#+BEGIN_SRC emacs-lisp
+;; intuitive window resizing
+(defun xor (b1 b2)
+  (or (and b1 b2)
+      (and (not b1) (not b2))))
 
+(defun move-border-left-or-right (arg dir)
+  "General function covering move-border-left and move-border-right. If DIR is
+     t, then move left, otherwise move right."
+  (interactive)
+  (if (null arg) (setq arg 3))
+  (let ((left-edge (nth 0 (window-edges))))
+    (if (xor (= left-edge 0) dir)
+        (shrink-window arg t)
+        (enlarge-window arg t))))
+
+(defun move-border-up-or-down (arg dir)
+  "General function covering move-border-up and move-border-down. If DIR is
+     t, then move up, otherwise move down."
+  (interactive)
+  (if (null arg) (setq arg 3))
+  (let ((top-edge (nth 1 (window-edges))))
+    (if (xor (= top-edge 0) dir)
+        (shrink-window arg nil)
+        (enlarge-window arg nil))))
+
+(defun move-border-left (arg)
+  (interactive "P")
+  (move-border-left-or-right arg t))
+
+(defun move-border-right (arg)
+  (interactive "P")
+  (move-border-left-or-right arg nil))
+
+(defun move-border-up (arg)
+  (interactive "P")
+  (move-border-up-or-down arg t))
+
+(defun move-border-down (arg)
+  (interactive "P")
+  (move-border-up-or-down arg nil))
+;; keybindings for window resizing
+(global-set-key (kbd "C-S-<left>") 'move-border-left)
+(global-set-key (kbd "C-S-<right>") 'move-border-right)
+(global-set-key (kbd "C-s-<up>") 'move-border-up)
+(global-set-key (kbd "C-s-<down>") 'move-border-down)
+
+#+END_SRC
+
+#+RESULTS:
+: move-border-down
 
 ** TODO i3-emacs
 * editing
@@ -232,17 +348,45 @@
 #+BEGIN_SRC emacs-lisp
 (global-linum-mode t)
 #+END_SRC
+** direnv
+#+BEGIN_SRC emacs-lisp
+(use-package direnv
+ :config
+ (direnv-mode))
+#+END_SRC
+** autocomplete
+#+BEGIN_SRC emacs-lisp
+  (use-package company
+  :hook (after-init . global-company-mode))
+#+END_SRC
 ** Indentation
 #+BEGIN_SRC emacs-lisp
-(setq-default indent-tabs-mode nil)
-(setq-default tab-width 2) ; or any other preferred value
-(defvaralias 'c-basic-offset 'tab-width)
-(defvaralias 'cperl-indent-level 'tab-width)
+  (setq-default indent-tabs-mode nil)
+  (setq-default tab-width 2) ; or any other preferred value
+  (defvaralias 'c-basic-offset 'tab-width)
+  (defvaralias 'cperl-indent-level 'tab-width)
+  (define-key prog-mode-map (kbd "<tab>") #'company-indent-or-complete-common)
 #+END_SRC
+** smart home key
+#+BEGIN_SRC emacs-lisp
+;; "smart" home, i.e., home toggles b/w 1st non-blank character and 1st column
+(defun smart-beginning-of-line ()
+  "Move point to first non-whitespace character or beginning-of-line."
+  (interactive "^") ; Use (interactive "^") in Emacs 23 to make shift-select work
+  (let ((oldpos (point)))
+    (back-to-indentation)
+    (and (= oldpos (point))
+         (beginning-of-line))))
+(global-set-key [home] 'smart-beginning-of-line)
+(global-set-key (kbd "C-a") 'smart-beginning-of-line)
+
+#+END_SRC
+
+
 ** git-gutter-fringe
 #+BEGIN_SRC emacs-lisp
-(use-package git-gutter-fringe
-    :config (global-git-gutter-mode t))
+  ;; (use-package git-gutter-fringe
+  ;;     :config (global-git-gutter-mode t))
 #+END_SRC
 ** all-the-icons
 #+BEGIN_SRC emacs-lisp
@@ -265,40 +409,94 @@ from [[https://www.emacswiki.org/emacs/BackupDirectory][emacs wiki]]
 #+END_SRC
 ** Evil
 #+BEGIN_SRC emacs-lisp
-(use-package evil
-    :config (evil-mode t))
-(use-package which-key
-    :init
-    (setq which-key-allow-evil-operators t)
-    (setq which-key-show-operator-state-maps t)
-    :config
-    (which-key-mode 1)
-    (which-key-setup-minibuffer)) ; do I need this?
+  (global-undo-tree-mode)
+    (setq evil-want-C-i-jump nil)
+
+      (use-package evil
+          :config
+          (evil-mode t)
+          (evil-set-undo-system 'undo-tree)
+
+; change cursor based on mode
+(add-hook 'evil-insert-state-entry-hook (lambda () (when (not (display-graphic-p)) (send-string-to-terminal "\033[5 q"))))
+(add-hook 'evil-normal-state-entry-hook (lambda () (when (not (display-graphic-p)) (send-string-to-terminal "\033[0 q"))))
+          )
+      (use-package which-key
+          :diminish
+          :init
+          (setq which-key-allow-evil-operators t)
+          (setq which-key-show-operator-state-maps t)
+          :config
+          (which-key-mode 1)
+          (which-key-setup-minibuffer)) ; do I need this?
 #+END_SRC
+
+#+RESULTS:
+: t
+
 *** evil-goggles
 #+BEGIN_SRC emacs-lisp
-(use-package evil-goggles
-    :config (evil-goggles-mode)
-            (evil-goggles-use-diff-faces))
+  (use-package evil-goggles
+      :diminish
+      :config (evil-goggles-mode)
+              (evil-goggles-use-diff-faces))
 #+END_SRC
 *** TODO [[https://github.com/emacs-evil/evil-surround][evil-surround]]
 *** TODO more evil bindings
 **** https://github.com/Somelauw/evil-org-mode/blob/master/doc/keythemes.org
 **** follow link with ret
 ** TODO multiple-cursors
+** DONE fix clipboard on wayland
+#+BEGIN_SRC emacs-lisp
+  (setq wl-copy-process nil)
+  (defun wl-copy (text)
+    (setq wl-copy-process (let ((default-directory "~"))
+                            (make-process :name "wl-copy"
+                                        :buffer nil
+                                        :command '("wl-copy" "-f" "-n")
+                                        :noquery t
+                                        :connection-type 'pipe)))
+    (process-send-string wl-copy-process text)
+    (process-send-eof wl-copy-process))
+  (defun wl-paste ()
+    (if (and wl-copy-process (process-live-p wl-copy-process))
+        nil
+        (let ((default-directory "~"))
+          (shell-command-to-string "wl-paste -n | tr -d '\r'"))))
+  (setq interprogram-cut-function 'wl-copy)
+  (setq interprogram-paste-function 'wl-paste)
+#+END_SRC
+
+#+RESULTS:
+: wl-paste
+
 * Tools
 ** Magit
 #+BEGIN_SRC emacs-lisp
-(use-package magit
-  :bind (("C-c g" . magit-status)
-         ("C-c C-g l" . magit-log-all)))
+  (use-package magit
+      :bind (("C-c g" . magit-status)
+             ("C-c C-g l" . magit-log-all)))
+  (use-package forge
+    :init
+(setq forge-topic-list-limit '(60 . 0))
+    :after magit)
 #+END_SRC
-** Pass
+** weechat
 #+BEGIN_SRC emacs-lisp
-(use-package pass
-  :commands pass)
+(use-package weechat
+  :commands weechat-connect
+  :init
+  (setq weechat-more-lines-amount 100)
+  (setq weechat-host-default "pennyworth.yori.cc")
+  (setq weechat-mode-default "ssh -W localhost:%p %h")
+  (setq weechat-modules '(weechat-button weechat-complete weechat-notifications))
+)
 #+END_SRC
-*** TODO helm-pass or password-store or fix keybindings for pass
+** notmuch
+#+BEGIN_SRC emacs-lisp
+(use-package notmuch
+      :bind (("C-c n" . notmuch)))
+#+END_SRC
 ** TODO https://github.com/mbork/beeminder.el
 * language-specific
 ** markdown
@@ -322,12 +520,37 @@ from [[https://www.emacswiki.org/emacs/BackupDirectory][emacs wiki]]
 #+END_SRC
 ** haskell
 #+BEGIN_SRC emacs-lisp
-(load-library "haskell-mode-autoloads")
-  (use-package intero
-   :config     (add-hook 'haskell-mode-hook 'intero-mode)
-  )
+  (load-library "haskell-mode-autoloads")
+  ;;   (use-package intero
+  ;;    :config     (add-hook 'haskell-mode-hook 'intero-mode)
+  ;;   )
 #+END_SRC
+
 *** TODO intero / haskell mode  [[https://wiki.haskell.org/Emacs]]
+** rust
+#+BEGIN_SRC emacs-lisp
+(use-package rust-mode
+    :commands (rust-mode)
+    :mode (("\\.rs\\'" . rust-mode)))
+#+END_SRC
+** terraform-mode
+#+BEGIN_SRC emacs-lisp
+(use-package terraform-mode
+    :commands (terraform-mode)
+    :mode (("\\.tf\\'" . terraform-mode)))
+#+END_SRC
+** vue
+#+BEGIN_SRC emacs-lisp
+(use-package vue-mode
+    :commands (vue-mode)
+    :mode (("\\.vue\\'" . vue-mode)))
+#+END_SRC
+** reason
+#+BEGIN_SRC emacs-lisp
+(use-package reason-mode
+    :commands (reason-mode)
+    :mode (("\\.re\\'" . reason-mode)))
+#+END_SRC
 ** TODO proof-general
 * Inspiration
 ** [[https://github.com/hrs/dotfiles/blob/master/emacs/.emacs.d/configuration.org][hrs]]
