--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -2,6 +2,11 @@
 #+AUTHOR: Yorick van Pelt
 
 * Prelims
+** Workarounds?
+#+BEGIN_SRC emacs-lisp
+(setq max-lisp-eval-depth 10000)
+(setq max-specpdl-size 13000)
+#+END_SRC
 ** start server
 #+BEGIN_SRC emacs-lisp
 (server-start)
@@ -18,6 +23,15 @@
   (load custom-file)
 #+END_SRC
 * Org stuff
+** Scratch buffer
+#+BEGIN_SRC emacs-lisp
+  (setq initial-major-mode 'org-mode)
+  (setq initial-scratch-message "\
+  ,#+TITLE: Scratch buffer
+  ,#+AUTHOR: Yorick van Pelt
+
+  ")
+#+END_SRC
 ** modules
 #+BEGIN_SRC emacs-lisp
 #+END_SRC
@@ -120,15 +134,6 @@
       (setq org-ref-completion-library 'org-ref-ivy-cite))
 #+END_SRC
 * Look
-** Fonts
-#+BEGIN_SRC emacs-lisp
-  (set-face-attribute 'default nil
-                    :family "monospace"
-                  :height 120
-                :weight 'normal
-              :width 'normal)
-
-#+END_SRC
 ** Solarized
 #+BEGIN_SRC emacs-lisp
                 ;; (use-package solarized
@@ -157,14 +162,14 @@
 #+END_SRC
 ** Transparency
 #+BEGIN_SRC emacs-lisp
-(set-frame-parameter (selected-frame) 'alpha '(95 . 95))
-(add-to-list 'default-frame-alist '(alpha . (95 . 95)))
+  ;; todo: transparency is slow somehow
+  ;; (set-frame-parameter (selected-frame) 'alpha '(95 . 95))
+  ;; (add-to-list 'default-frame-alist '(alpha . (95 . 95)))
 #+END_SRC
 ** Cleaner frames
 #+BEGIN_SRC emacs-lisp
-(tool-bar-mode 0)
-(menu-bar-mode 0)
-(scroll-bar-mode 0)
+  ;; toolbars are disabled in early-init.el
+  (setq inhibit-startup-screen t)
 #+END_SRC
 ** hl-line
 #+BEGIN_SRC emacs-lisp
@@ -248,6 +253,7 @@ from https://vickychijwani.me/nuggets-from-my-emacs-part-i/
       :diminish
       :bind (("C-s" . swiper)
              ("C-c C-r" . ivy-resume)
+             ("C-x b" . ivy-switch-buffer)
              ("<f6>" . ivy-resume)))
 #+END_SRC
 ** Counsel
@@ -280,7 +286,6 @@ from https://vickychijwani.me/nuggets-from-my-emacs-part-i/
 ** ggtags
 #+BEGIN_SRC emacs-lisp
 (use-package ggtags
-:demand
 :bind ("M-." . ggtags-find-tag-dwim))
 #+END_SRC
 ** intuitive window resize
@@ -337,6 +342,11 @@ from https://vickychijwani.me/nuggets-from-my-emacs-part-i/
 : move-border-down
 
 ** TODO i3-emacs
+** Terminal
+#+BEGIN_SRC emacs-lisp
+(xterm-mouse-mode 1)
+(define-key local-function-key-map "\033[73;5~" [(control return)])
+#+END_SRC
 * editing
 ** line numbers
 *** relative
@@ -410,25 +420,27 @@ from [[https://www.emacswiki.org/emacs/BackupDirectory][emacs wiki]]
 ** Evil
 #+BEGIN_SRC emacs-lisp
   (global-undo-tree-mode)
-    (setq evil-want-C-i-jump nil)
+  ;; prevent .~undo-tree file pollution
+  (setq undo-tree-auto-save-history nil)
+      (setq evil-want-C-i-jump nil)
 
-      (use-package evil
-          :config
-          (evil-mode t)
-          (evil-set-undo-system 'undo-tree)
+        (use-package evil
+            :config
+            (evil-mode t)
+            (evil-set-undo-system 'undo-tree)
 
-; change cursor based on mode
-(add-hook 'evil-insert-state-entry-hook (lambda () (when (not (display-graphic-p)) (send-string-to-terminal "\033[5 q"))))
-(add-hook 'evil-normal-state-entry-hook (lambda () (when (not (display-graphic-p)) (send-string-to-terminal "\033[0 q"))))
-          )
-      (use-package which-key
-          :diminish
-          :init
-          (setq which-key-allow-evil-operators t)
-          (setq which-key-show-operator-state-maps t)
-          :config
-          (which-key-mode 1)
-          (which-key-setup-minibuffer)) ; do I need this?
+  ; change cursor based on mode
+  (add-hook 'evil-insert-state-entry-hook (lambda () (when (not (display-graphic-p)) (send-string-to-terminal "\033[5 q"))))
+  (add-hook 'evil-normal-state-entry-hook (lambda () (when (not (display-graphic-p)) (send-string-to-terminal "\033[0 q"))))
+            )
+        (use-package which-key
+            :diminish
+            :init
+            (setq which-key-allow-evil-operators t)
+            (setq which-key-show-operator-state-maps t)
+            :config
+            (which-key-mode 1)
+            (which-key-setup-minibuffer)) ; do I need this?
 #+END_SRC
 
 #+RESULTS:
@@ -437,9 +449,11 @@ from [[https://www.emacswiki.org/emacs/BackupDirectory][emacs wiki]]
 *** evil-goggles
 #+BEGIN_SRC emacs-lisp
   (use-package evil-goggles
-      :diminish
-      :config (evil-goggles-mode)
-              (evil-goggles-use-diff-faces))
+    :diminish
+    :after evil
+    :config
+    (evil-goggles-mode)
+    (evil-goggles-use-diff-faces))
 #+END_SRC
 *** TODO [[https://github.com/emacs-evil/evil-surround][evil-surround]]
 *** TODO more evil bindings
@@ -448,7 +462,8 @@ from [[https://www.emacswiki.org/emacs/BackupDirectory][emacs wiki]]
 ** TODO multiple-cursors
 ** crdt
 #+BEGIN_SRC emacs-lisp
-  (use-package crdt)
+  (use-package crdt
+    :commands (crdt-connect))
 #+END_SRC
 
 #+RESULTS:
@@ -527,15 +542,21 @@ from [[https://www.emacswiki.org/emacs/BackupDirectory][emacs wiki]]
 #+END_SRC
 ** lsp
 #+BEGIN_SRC emacs-lisp
-        (use-package lsp-mode
-          :init
-          (setq lsp-keymap-prefix "C-c s")
-        :hook (lsp-mode . lsp-enable-which-key-integration)
-        :commands (lsp lsp-deferred))
-      (use-package lsp-ivy :commands lsp-ivy-workspace-symbol)
-    (use-package lsp-ui :commands lsp-ui-mode)
+  (use-package lsp-mode
+    :init
+    (setq lsp-keymap-prefix "C-c s")
+    :hook
+    (lsp-mode . lsp-enable-which-key-integration)
+    :commands
+    (lsp lsp-deferred))
+  (use-package lsp-ivy
+    :commands lsp-ivy-workspace-symbol
+    :after lsp)
+  (use-package lsp-ui
+    :commands lsp-ui-mode
+    :after lsp)
   (setq gc-cons-threshold 100000000)
-(setq read-process-output-max (* 1024 1024 3)) ;; 3mb
+  (setq read-process-output-max (* 1024 1024 3)) ;; 3mb
 #+END_SRC
 
 #+RESULTS:
