--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -366,6 +366,8 @@ from https://vickychijwani.me/nuggets-from-my-emacs-part-i/
   :config
   ;; use copilot
   (delq 'company-preview-if-just-one-frontend company-frontends))
+(use-package company-box
+  :hook (company-mode . company-box-mode))
 #+END_SRC
 ** Indentation
 #+BEGIN_SRC emacs-lisp
